@@ -269,3 +269,345 @@ char *encoded_message_latin = "From: =?iso-8859-1?Q?B=BA_V._F._Z=EAzere?= <nobod
 	"\n"
 	"test\n\n";
 
+char *multipart_mixed = "Received: from RAIVO (raivo.kisise [192.168.111.49])\n"
+	"	by test.kisise (Postfix) with ESMTP id 5C4981214C\n"
+	"	for <test@test.kisise>; Thu,  5 Oct 2006 04:18:26 +0300 (EEST)\n"
+	"From: \"try\" <try@test.kisise>\n"
+	"To: <test@test.kisise>\n"
+	"Subject: 2 docs\n"
+	"Date: Wed, 4 Oct 2006 18:52:09 +0300\n"
+	"Message-ID: <005801c6e7cd$0d2888b0$316fa8c0@RAIVO>\n"
+	"MIME-Version: 1.0\n"
+	"Content-Type: multipart/mixed;\n"
+	"	boundary=\"----=_NextPart_000_0059_01C6E7E6.3275C0B0\"\n"
+	"X-Priority: 3 (Normal)\n"
+	"X-MSMail-Priority: Normal\n"
+	"X-Mailer: Microsoft Outlook, Build 10.0.6626\n"
+	"Importance: Normal\n"
+	"X-MimeOLE: Produced By Microsoft MimeOLE V6.00.2900.2962\n"
+	"\n"
+	"This is a multi-part message in MIME format.\n"
+	"\n"
+	"------=_NextPart_000_0059_01C6E7E6.3275C0B0\n"
+	"Content-Type: multipart/alternative;\n"
+	"	boundary=\"----=_NextPart_001_005A_01C6E7E6.3275C0B0\"\n"
+	"\n"
+	"\n"
+	"------=_NextPart_001_005A_01C6E7E6.3275C0B0\n"
+	"Content-Type: text/plain;\n"
+	"	charset=\"us-ascii\"\n"
+	"Content-Transfer-Encoding: quoted-printable\n"
+	"\n"
+	"This message contains 2 other messages with MS Word .doc attachments. =\n"
+	"These\n"
+	"two messages are forwarded with MS Outlook 2000, using HTML and MS Word =\n"
+	"as\n"
+	"the editor (default MS Outlook settings). This is the body of the new =\n"
+	"third\n"
+	"message. The first two messages were created in the same way with MS =\n"
+	"Outlook\n"
+	"in HTML in a MS Word window.\n"
+	"\n"
+	"\n"
+	"------=_NextPart_001_005A_01C6E7E6.3275C0B0\n"
+	"Content-Type: text/html;\n"
+	"	charset=\"us-ascii\"\n"
+	"Content-Transfer-Encoding: quoted-printable\n"
+	"\n"
+	"<html>\n"
+	"\n"
+	"<head>\n"
+	"<META HTTP-EQUIV=3D\"Content-Type\" CONTENT=3D\"text/html; =\n"
+	"charset=3Dus-ascii\">\n"
+	"\n"
+	"\n"
+	"<meta name=3DGenerator content=3D\"Microsoft Word 10 (filtered)\">\n"
+	"\n"
+	"<style>\n"
+	"<!--\n"
+	" /* Style Definitions */\n"
+	" p.MsoNormal, li.MsoNormal, div.MsoNormal\n"
+	"	{margin:0cm;\n"
+	"	margin-bottom:.0001pt;\n"
+	"	font-size:12.0pt;\n"
+	"	font-family:\"Times New Roman\";}\n"
+	"a:link, span.MsoHyperlink\n"
+	"	{color:blue;\n"
+	"	text-decoration:underline;}\n"
+	"a:visited, span.MsoHyperlinkFollowed\n"
+	"	{color:purple;\n"
+	"	text-decoration:underline;}\n"
+	"span.Meililaad17\n"
+	"	{font-family:Arial;\n"
+	"	color:navy;}\n"
+	"@page Section1\n"
+	"	{size:595.3pt 841.9pt;\n"
+	"	margin:70.85pt 70.85pt 70.85pt 70.85pt;}\n"
+	"div.Section1\n"
+	"	{page:Section1;}\n"
+	"-->\n"
+	"</style>\n"
+	"\n"
+	"</head>\n"
+	"\n"
+	"<body lang=3DET link=3Dblue vlink=3Dpurple>\n"
+	"\n"
+	"<div class=3DSection1>\n"
+	"\n"
+	"<p class=3DMsoNormal><font size=3D2 color=3Dnavy face=3DArial><span =\n"
+	"style=3D'font-size:\n"
+	"10.0pt;font-family:Arial;color:navy'>This message contains 2 other =\n"
+	"messages with\n"
+	"MS Word .doc attachments. These two messages are forwarded with MS =\n"
+	"Outlook\n"
+	"2000, using HTML and MS Word as the editor (default MS Outlook =\n"
+	"settings). This is\n"
+	"the body of the new third message. The first two messages were created =\n"
+	"in the same\n"
+	"way with MS Outlook in HTML in a MS Word window.</span></font></p>\n"
+	"\n"
+	"</div>\n"
+	"\n"
+	"</body>\n"
+	"\n"
+	"</html>\n"
+	"\n"
+	"------=_NextPart_001_005A_01C6E7E6.3275C0B0--\n"
+	"\n"
+	"------=_NextPart_000_0059_01C6E7E6.3275C0B0\n"
+	"Content-Type: message/rfc822\n"
+	"Content-Transfer-Encoding: 7bit\n"
+	"Content-Disposition: attachment\n"
+	"\n"
+	"From: \"try\" <try@test.kisise>\n"
+	"To: <try@test.kisise>\n"
+	"Subject: doc2\n"
+	"Date: Wed, 4 Oct 2006 17:56:28 +0300\n"
+	"Message-ID: <000601c6e7c5$45735e00$316fa8c0@RAIVO>\n"
+	"MIME-Version: 1.0\n"
+	"Content-Type: multipart/mixed;\n"
+	"	boundary=\"----=_NextPart_000_004E_01C6E7E6.327105C0\"\n"
+	"X-Priority: 3 (Normal)\n"
+	"X-MSMail-Priority: Normal\n"
+	"X-Mailer: Microsoft Outlook, Build 10.0.6626\n"
+	"X-DSPAM-Result: Innocent\n"
+	"X-DSPAM-Processed: Thu Oct  5 03:19:33 2006\n"
+	"X-DSPAM-Confidence: 0.9899\n"
+	"X-DSPAM-Improbability: 1 in 9809 chance of being spam\n"
+	"X-DSPAM-Probability: 0.0000\n"
+	"X-DSPAM-Signature: 28,45244f95213033639915435\n"
+	"X-DSPAM-Factors: 27,size+10, 0.01000,Content-Type*charset=\"us, 0.01000,Content-Type*charset=\"us, 0.01000,X-Mailer*Outlook+Build, 0.01000,Received*<try+test.kisise>, 0.01000,10, 0.01000,10, 0.01000,To*test.kisise>, 0.01000,of, 0.01000,of, 0.01000,<font, 0.01000,Received*ESMTP, 0.01000,X-MimeOLE*By, 0.01000,message, 0.01000,X-Priority*3+(Normal), 0.01000,X-MimeOLE*Produced, 0.01000,(filtered)\">+<font, 0.01000,X-Mailer*Build+10.0.6626, 0.01000,multi, 0.01000,Received*Oct, 0.01000,Content-Transfer-Encoding*quoted+printable, 0.01000,content=\"Microsoft, 0.01000,Received*by+test.kisise, 0.01000,<meta, 0.01000,10+(filtered)\">, 0.01000,charset=us+ascii\">, 0.01000,X-MimeOLE*Microsoft+MimeOLE, 0.01000\n"
+	"X-DBMail-PhysMessage-ID: 104\n"
+	"Importance: Normal\n"
+	"X-MimeOLE: Produced By Microsoft MimeOLE V6.00.2900.2962\n"
+	"\n"
+	"This is a multi-part message in MIME format.\n"
+	"\n"
+	"------=_NextPart_000_004E_01C6E7E6.327105C0\n"
+	"Content-Type: multipart/alternative;\n"
+	"	boundary=\"----=_NextPart_001_004F_01C6E7E6.327105C0\"\n"
+	"\n"
+	"\n"
+	"------=_NextPart_001_004F_01C6E7E6.327105C0\n"
+	"Content-Type: text/plain;\n"
+	"	charset=\"us-ascii\"\n"
+	"Content-Transfer-Encoding: 7bit\n"
+	"\n"
+	"Body of doc2\n"
+	"\n"
+	"\n"
+	"------=_NextPart_001_004F_01C6E7E6.327105C0\n"
+	"Content-Type: text/html;\n"
+	"	charset=\"us-ascii\"\n"
+	"Content-Transfer-Encoding: quoted-printable\n"
+	"\n"
+	"<html>\n"
+	"\n"
+	"<head>\n"
+	"<META HTTP-EQUIV=3D\"Content-Type\" CONTENT=3D\"text/html; =\n"
+	"charset=3Dus-ascii\">\n"
+	"\n"
+	"\n"
+	"\n"
+	"\n"
+	"<meta name=3DGenerator content=3D\"Microsoft Word 10 (filtered)\">\n"
+	"\n"
+	"<style>\n"
+	"<!--\n"
+	" /* Style Definitions */\n"
+	" p.MsoNormal, li.MsoNormal, div.MsoNormal\n"
+	"	{margin:0cm;\n"
+	"	margin-bottom:.0001pt;\n"
+	"	font-size:12.0pt;\n"
+	"	font-family:\"Times New Roman\";}\n"
+	"a:link, span.MsoHyperlink\n"
+	"	{color:blue;\n"
+	"	text-decoration:underline;}\n"
+	"a:visited, span.MsoHyperlinkFollowed\n"
+	"	{color:purple;\n"
+	"	text-decoration:underline;}\n"
+	"span.Meililaad17\n"
+	"	{font-family:Arial;\n"
+	"	color:windowtext;}\n"
+	"@page Section1\n"
+	"	{size:595.3pt 841.9pt;\n"
+	"	margin:70.85pt 70.85pt 70.85pt 70.85pt;}\n"
+	"div.Section1\n"
+	"	{page:Section1;}\n"
+	"-->\n"
+	"</style>\n"
+	"\n"
+	"</head>\n"
+	"\n"
+	"<body lang=3DET link=3Dblue vlink=3Dpurple>\n"
+	"\n"
+	"<div class=3DSection1>\n"
+	"\n"
+	"<p class=3DMsoNormal><font size=3D2 face=3DArial><span =\n"
+	"style=3D'font-size:10.0pt;\n"
+	"font-family:Arial'>Body of doc2</span></font></p>\n"
+	"\n"
+	"</div>\n"
+	"\n"
+	"</body>\n"
+	"\n"
+	"</html>\n"
+	"\n"
+	"------=_NextPart_001_004F_01C6E7E6.327105C0--\n"
+	"\n"
+	"------=_NextPart_000_004E_01C6E7E6.327105C0\n"
+	"Content-Type: application/msword;\n"
+	"	name=\"doc2.doc\"\n"
+	"Content-Transfer-Encoding: base64\n"
+	"Content-Disposition: attachment;\n"
+	"	filename=\"doc2.doc\"\n"
+	"\n"
+	"0M8R4KGxGuEAAAAAAAAAAAAAAAAAAAAAPgADAP7/CQAGAAAAAAAAAAAAAAABAAAALgAAAAAAAAAA\n"
+	"EAAAMAAAAAEAAAD+////AAAAAC8AAAD/////////////////////////////////////////////\n"
+	"AAAAAwAAAAEAAAADAAAABQAAAAMAAACUGgoACwAAAAAAAAALAAAAAAAAAAsAAAAAAAAACwAAAAAA\n"
+	"AAAeEAAAAQAAAAYAAABUZXN0MQAMEAAAAgAAAB4AAAAHAAAAVGlpdGVsAAMAAAABAAAAAAAAWAEA\n"
+	"AAcAAAAAAAAAQAAAAAEAAAD0AAAAAAAAgPwAAAACAAAABAEAAAMAAAAMAQAABAAAACABAAAFAAAA\n"
+	"SAEAAA==\n"
+	"\n"
+	"------=_NextPart_000_004E_01C6E7E6.327105C0--\n"
+	"\n"
+	"------=_NextPart_000_0059_01C6E7E6.3275C0B0\n"
+	"Content-Type: message/rfc822\n"
+	"Content-Transfer-Encoding: 7bit\n"
+	"Content-Disposition: attachment\n"
+	"\n"
+	"From: \"try\" <try@test.kisise>\n"
+	"To: <try@test.kisise>\n"
+	"Subject: doc1\n"
+	"Date: Wed, 4 Oct 2006 17:56:11 +0300\n"
+	"Message-ID: <000001c6e7c5$3b28eff0$316fa8c0@RAIVO>\n"
+	"MIME-Version: 1.0\n"
+	"Content-Type: multipart/mixed;\n"
+	"	boundary=\"----=_NextPart_000_0053_01C6E7E6.327376C0\"\n"
+	"X-Priority: 3 (Normal)\n"
+	"X-MSMail-Priority: Normal\n"
+	"X-Mailer: Microsoft Outlook, Build 10.0.6626\n"
+	"X-DSPAM-Result: Innocent\n"
+	"X-DSPAM-Processed: Thu Oct  5 03:19:15 2006\n"
+	"X-DSPAM-Confidence: 0.9899\n"
+	"X-DSPAM-Improbability: 1 in 9809 chance of being spam\n"
+	"X-DSPAM-Probability: 0.0000\n"
+	"X-DSPAM-Signature: 28,45244f83213031923176077\n"
+	"X-DSPAM-Factors: 27,size+10, 0.01000,Content-Type*charset=\"us, 0.01000,Content-Type*charset=\"us, 0.01000,X-Mailer*Outlook+Build, 0.01000,Received*<try+test.kisise>, 0.01000,10, 0.01000,10, 0.01000,To*test.kisise>, 0.01000,of, 0.01000,of, 0.01000,<font, 0.01000,Received*ESMTP, 0.01000,X-MimeOLE*By, 0.01000,message, 0.01000,X-Priority*3+(Normal), 0.01000,X-MimeOLE*Produced, 0.01000,(filtered)\">+<font, 0.01000,X-Mailer*Build+10.0.6626, 0.01000,multi, 0.01000,Received*Oct, 0.01000,Content-Transfer-Encoding*quoted+printable, 0.01000,content=\"Microsoft, 0.01000,Received*by+test.kisise, 0.01000,<meta, 0.01000,10+(filtered)\">, 0.01000,charset=us+ascii\">, 0.01000,X-MimeOLE*Microsoft+MimeOLE, 0.01000\n"
+	"X-DBMail-PhysMessage-ID: 103\n"
+	"Importance: Normal\n"
+	"X-MimeOLE: Produced By Microsoft MimeOLE V6.00.2900.2962\n"
+	"\n"
+	"This is a multi-part message in MIME format.\n"
+	"\n"
+	"------=_NextPart_000_0053_01C6E7E6.327376C0\n"
+	"Content-Type: multipart/alternative;\n"
+	"	boundary=\"----=_NextPart_001_0054_01C6E7E6.327376C0\"\n"
+	"\n"
+	"\n"
+	"------=_NextPart_001_0054_01C6E7E6.327376C0\n"
+	"Content-Type: text/plain;\n"
+	"	charset=\"us-ascii\"\n"
+	"Content-Transfer-Encoding: 7bit\n"
+	"\n"
+	"Body of doc1\n"
+	"\n"
+	"\n"
+	"------=_NextPart_001_0054_01C6E7E6.327376C0\n"
+	"Content-Type: text/html;\n"
+	"	charset=\"us-ascii\"\n"
+	"Content-Transfer-Encoding: quoted-printable\n"
+	"\n"
+	"<html>\n"
+	"\n"
+	"<head>\n"
+	"<META HTTP-EQUIV=3D\"Content-Type\" CONTENT=3D\"text/html; =\n"
+	"charset=3Dus-ascii\">\n"
+	"\n"
+	"\n"
+	"\n"
+	"\n"
+	"<meta name=3DGenerator content=3D\"Microsoft Word 10 (filtered)\">\n"
+	"\n"
+	"<style>\n"
+	"<!--\n"
+	" /* Style Definitions */\n"
+	" p.MsoNormal, li.MsoNormal, div.MsoNormal\n"
+	"	{margin:0cm;\n"
+	"	margin-bottom:.0001pt;\n"
+	"	font-size:12.0pt;\n"
+	"	font-family:\"Times New Roman\";}\n"
+	"a:link, span.MsoHyperlink\n"
+	"	{color:blue;\n"
+	"	text-decoration:underline;}\n"
+	"a:visited, span.MsoHyperlinkFollowed\n"
+	"	{color:purple;\n"
+	"	text-decoration:underline;}\n"
+	"span.Meililaad17\n"
+	"	{font-family:Arial;\n"
+	"	color:windowtext;}\n"
+	"@page Section1\n"
+	"	{size:595.3pt 841.9pt;\n"
+	"	margin:70.85pt 70.85pt 70.85pt 70.85pt;}\n"
+	"div.Section1\n"
+	"	{page:Section1;}\n"
+	"-->\n"
+	"</style>\n"
+	"\n"
+	"</head>\n"
+	"\n"
+	"<body lang=3DET link=3Dblue vlink=3Dpurple>\n"
+	"\n"
+	"<div class=3DSection1>\n"
+	"\n"
+	"<p class=3DMsoNormal><font size=3D2 face=3DArial><span =\n"
+	"style=3D'font-size:10.0pt;\n"
+	"font-family:Arial'>Body of doc1</span></font></p>\n"
+	"\n"
+	"</div>\n"
+	"\n"
+	"</body>\n"
+	"\n"
+	"</html>\n"
+	"\n"
+	"------=_NextPart_001_0054_01C6E7E6.327376C0--\n"
+	"\n"
+	"------=_NextPart_000_0053_01C6E7E6.327376C0\n"
+	"Content-Type: application/msword;\n"
+	"	name=\"doc1.doc\"\n"
+	"Content-Transfer-Encoding: base64\n"
+	"Content-Disposition: attachment;\n"
+	"	filename=\"doc1.doc\"\n"
+	"\n"
+	"0M8R4KGxGuEAAAAAAAAAAAAAAAAAAAAAPgADAP7/CQAGAAAAAAAAAAAAAAABAAAALgAAAAAAAAAA\n"
+	"wAAAAA0AAADIAAAADAAAANoAAAACAAAA6QQAAB4AAAAQAAAAS3JlZGlpZGlpbmZvIEFTAAMAAAAB\n"
+	"AAAAAwAAAAEAAAADAAAABQAAAAMAAACUGgoACwAAAAAAAAALAAAAAAAAAAsAAAAAAAAACwAAAAAA\n"
+	"AAAeEAAAAQAAAAYAAABUZXN0MQAMEAAAAgAAAB4AAAAHAAAAVGlpdGVsAAMAAAABAAAAAAAAWAEA\n"
+	"AAcAAAAAAAAAQAAAAAEAAAD0AAAAAAAAgPwAAAACAAAABAEAAAMAAAAMAQAABAAAACABAAAFAAAA\n"
+	"SAEAAA==\n"
+	"\n"
+	"------=_NextPart_000_0053_01C6E7E6.327376C0--\n"
+	"\n"
+	"------=_NextPart_000_0059_01C6E7E6.3275C0B0--\n"
+	"\n"
+	"\n";
