@@ -22,12 +22,8 @@ Description: base package for the dbmail email solution
 
 Package: libdbmail0
 Architecture: any
-<<<<<<< master
 Depends: ${misc:Depends}, ${shlibs:Depends}, dbmail (= ${Source-Version}), libglib2.0-0 (>= 2.10.2), libgmime-2.0-2 | libgmime-2.1 (>= 2.1.19)
-=======
 Section: libs
-Depends: ${misc:Depends}, ${shlibs:Depends}, dbmail (= ${Source-Version}), libglib2.0-0 (>= 2.10.2), libgmime-2.0-2
->>>>>>> origin
 Suggests: stunnel | stunnel4, postfix | mail-transport-agent, dbmail-mysql (= ${Source-Version})| dbmail-pgsql (= ${Source-Version})| dbmail-sqlite (= ${Source-Version}), dbmail-ldap (= ${Source-Version}), dbmail-sieve (= ${Source-Version})
 Description: shared libraries for the dbmail email solution
  DBMAIL is a collection of programs that allows email to be
